--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "format": "prettier \"src/**/*.{js,html}\" --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/sturmst/AdoptMe/issues"
   },
-  "homepage": "https://github.com/sturmst/AdoptMe#readme"
+  "homepage": "https://github.com/sturmst/AdoptMe#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "prettier": "2.2.1"
+  }
 }
